# mcp

./: .gitignore  README.md  build_hook.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/anyvm_mcp/: __init__.py  server.py  vm_manager.py
src/anyvm_skill/: __init__.py  server.py
tests/: test_build_hook.py  test_server.py  test_vm_manager.py
