[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "anyvm-mcp"
version = "0.0.1"
description = "MCP server for anyvm — run, manage, and debug BSD/Illumos VMs with natural language"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["anyvm", "mcp", "ai", "bsd", "illumos", "vm", "virtualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp==1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[project.scripts]
anyvm-mcp = "anyvm_mcp.server:main"

[project.urls]
Homepage = "https://anyvm.org"
Repository = "https://github.com/anyvm-org/mcp"
Issues = "https://github.com/anyvm-org/mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anyvm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
