[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "build_hook.py"
anyvm-version = "v0.5.2"

[project]
name = "anyvm-mcp"
version = "0.1.0"
description = "MCP server for anyvm -- boot and manage BSD, illumos, Linux, Haiku, Android, Hurd, and Plan 9 VMs with natural language"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["anyvm", "mcp", "ai", "bsd", "illumos", "linux", "haiku", "qemu", "vm", "virtualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp==1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[project.scripts]
anyvm-mcp = "anyvm_mcp.server:main"

[project.urls]
Homepage = "https://anyvm.org"
Repository = "https://github.com/anyvm-org/mcp"
Issues = "https://github.com/anyvm-org/mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anyvm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
